--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,5 @@ webserver_config.py
 airflow.cfg
 airflow.db
 include/gcp/service_account.json
-
+include/soda/configuration.yml
+include/dataset/online_retail.csv
